# docs/swagger.json
@@ -16,6 +16,46 @@
         "version": "1.0"
     },
     "paths": {
+        "/sessions": {
+            "post": {
+                "description": "传入参数，用户登录",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "用户登录",
+                "parameters": [
+                    {
+                        "description": "请求参数",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "登录成功",
+                        "schema": {
+                            "$ref": "#/definitions/dto.LoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/common.BadRequestResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "post": {
                 "description": "传入参数，注册用户",
@@ -42,13 +82,13 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
+                        "description": "注册成功",
                         "schema": {
                             "$ref": "#/definitions/dto.CreateUserResponse"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "参数错误",
                         "schema": {
                             "$ref": "#/definitions/common.BadRequestResponse"
                         }
@@ -103,6 +143,18 @@
         "dto.CreateUserResponse": {
             "type": "object",
             "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.CreateUserResponseData"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
+        "dto.CreateUserResponseData": {
+            "type": "object",
+            "properties": {
                 "createAt": {
                     "description": "可能需要格式化为字符串",
                     "type": "string",
@@ -116,6 +168,48 @@
                 "uuid": {
                     "type": "string",
                     "example": "db376853-8f93-41f9-9a44-3c5ad8eedbbb"
+                }
+            }
+        },
+        "dto.LoginRequest": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "123456"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "robin"
+                }
+            }
+        },
+        "dto.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.LoginResponseData"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
+        "dto.LoginResponseData": {
+            "type": "object",
+            "properties": {
+                "expireAt": {
+                    "type": "integer",
+                    "example": 1763910483465
+                },
+                "token": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJnb2NoYXQtYXBpLXNlcnZpY2UiLCJleHAiOjE3NjM5OTc1MTksImlhdCI6MTc2MzkxMTExOSwidXNlcklkIjoiY2YzZDE1ZmMtM2ZlYS00NDkzLWFjMDMtYzBiMjkzYTBjNjc4IiwidXNlcm5hbWUiOiJyb2JpbjYifQ.Rddl8mxWIPBWYCIO5TQYTG8uvyyPbP3FF9ozGdfytwg"
                 }
             }
         }
