# internal/handler/v1/dto/user.go
@@ -1,6 +1,8 @@
 package dto
 
-import "time"
+import (
+	"time"
+)
 
 // CreateUserRequest 是创建用户接口的请求体 (DTO)
 type CreateUserRequest struct {
@@ -13,6 +15,11 @@ type CreateUserRequest struct {
 
 // CreateUserResponse  是返回给客户端的用户响应 (DTO)
 type CreateUserResponse struct {
+	Status string `json:"status" example:"success"`
+	Data   CreateUserResponseData
+}
+
+type CreateUserResponseData struct {
 	// 注意: 响应中不包含 PasswordHash
 	Username string    `json:"username" example:"robin"`
 	Uuid     string    `json:"uuid" example:"db376853-8f93-41f9-9a44-3c5ad8eedbbb"`
@@ -25,6 +32,11 @@ type LoginRequest struct {
 }
 
 type LoginResponse struct {
+	Status string `json:"status" example:"success"`
+	Data   LoginResponseData
+}
+
+type LoginResponseData struct {
 	Token    string `json:"token" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJnb2NoYXQtYXBpLXNlcnZpY2UiLCJleHAiOjE3NjM5OTc1MTksImlhdCI6MTc2MzkxMTExOSwidXNlcklkIjoiY2YzZDE1ZmMtM2ZlYS00NDkzLWFjMDMtYzBiMjkzYTBjNjc4IiwidXNlcm5hbWUiOiJyb2JpbjYifQ.Rddl8mxWIPBWYCIO5TQYTG8uvyyPbP3FF9ozGdfytwg"`
 	ExpireAt int64  `json:"expireAt" example:"1763910483465"`
 }
